<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:id="@+id/text_view_id"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/bmititle"
        android:layout_gravity="center"
        android:padding="16dp"
    />
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <RadioButton
            android:id="@+id/radio_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male" />

        <RadioButton
            android:id="@+id/radio_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female" />
    </RadioGroup>

    <EditText
        android:id="@+id/edit_text_age"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:minHeight="48dp"
        android:inputType="number"
        android:gravity="center"
        android:hint="@string/enter_your_age" />

    <EditText
        android:id="@+id/edit_text_height"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:minHeight="48dp"
        android:inputType="numberDecimal"
        android:gravity="center"
        android:hint="@string/enter_your_height_cm" />

    <EditText
        android:id="@+id/edit_text_weight"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:minHeight="48dp"
        android:inputType="numberDecimal"
        android:gravity="center"
        android:hint="@string/enter_your_weight_kg" />
    <Button
        android:id="@+id/calculate_button"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:text="@string/calculate" />
    <TextView
        android:id="@+id/bmi_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="18sp"
        android:layout_gravity="center"
        android:padding="16dp" />


</LinearLayout>